G8/g8prova/G8provaParser.java
package parser;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class G8provaParser extends Parser {
	
	String Titolo;
	float DrawspaceWidth;
	float DrawspaceHeigth;
	
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "FLOAT", "RGB", "ROTATION", 
		"TEXT", "WS", "'CIRC:'", "'COLOR'", "'COLORBODY'", "'CURV:'", "'DRAWSPACE HEIGTH'", 
		"'DRAWSPACE WIDTH'", "'ELLIPS:'", "'END'", "'ENDANGLE'", "'LINE:'", "'RADIUS'", 
		"'RECT:'", "'ROTATION'", "'SEMAX'", "'SEMIN'", "'STARTANGLE'", "'TITLE'", 
		"'TRIANGLE:'", "'WIDTH'", "'XA'", "'XB'", "'XC'", "'XCENTER'", "'XEND'", 
		"'XMIDDLE'", "'XSTART'", "'YA'", "'YB'", "'YC'", "'YCENTER'", "'YEND'", 
		"'YMIDDLE'", "'YSTART'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int COMMENT=4;
	public static final int FLOAT=5;
	public static final int RGB=6;
	public static final int ROTATION=7;
	public static final int TEXT=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public G8provaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public G8provaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return G8provaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g"; }



	// $ANTLR start "begin"
	// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:3:1: begin : 'TITLE' b1= TEXT 'DRAWSPACE WIDTH' b2= FLOAT 'DRAWSPACE HEIGTH' b3= FLOAT ( list )* end ;
	public final void begin() throws RecognitionException {
		Token b1=null;
		Token b2=null;
		Token b3=null;

		try {
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:3:7: ( 'TITLE' b1= TEXT 'DRAWSPACE WIDTH' b2= FLOAT 'DRAWSPACE HEIGTH' b3= FLOAT ( list )* end )
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:3:9: 'TITLE' b1= TEXT 'DRAWSPACE WIDTH' b2= FLOAT 'DRAWSPACE HEIGTH' b3= FLOAT ( list )* end
			{
			match(input,26,FOLLOW_26_in_begin10); 
			b1=(Token)match(input,TEXT,FOLLOW_TEXT_in_begin14); 
			Titolo=(b1!=null?b1.getText():null);
			match(input,15,FOLLOW_15_in_begin18); 
			b2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_begin22); 
			DrawspaceWidth=Float.valueOf((b2!=null?b2.getText():null));
			match(input,14,FOLLOW_14_in_begin26); 
			b3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_begin30); 
			DrawspaceHeigth=Float.valueOf((b3!=null?b3.getText():null));
			
			System.out.println("<!doctype html>");
			 System.out.println("<html>");
			 System.out.println("<head>");
			 System.out.println("<title> " + Titolo + " </title>");
			 System.out.println("<style> canvas {border: 1px #000 dotted;} </style>");
			 System.out.println("<script>");
			 System.out.println("window.onload = function () {");
	 		 	System.out.println("var canvas = document.getElementById('" + Titolo + "');");
			 	System.out.println("var context = canvas.getContext('2d');");
			
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:3:154: ( list )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==10||LA1_0==13||LA1_0==16||LA1_0==19||LA1_0==21||LA1_0==27) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:3:155: list
					{
					pushFollow(FOLLOW_list_in_begin35);
					list();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			pushFollow(FOLLOW_end_in_begin39);
			end();
			state._fsp--;
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "begin"



	// $ANTLR start "list"
	// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:1: list : ( line | triangle | rectangle | curve | circle | ellipse );
	public final void list() throws RecognitionException {
		try {
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:6: ( line | triangle | rectangle | curve | circle | ellipse )
			int alt2=6;
			switch ( input.LA(1) ) {
			case 19:
				{
				alt2=1;
				}
				break;
			case 27:
				{
				alt2=2;
				}
				break;
			case 21:
				{
				alt2=3;
				}
				break;
			case 13:
				{
				alt2=4;
				}
				break;
			case 10:
				{
				alt2=5;
				}
				break;
			case 16:
				{
				alt2=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:8: line
					{
					pushFollow(FOLLOW_line_in_list59);
					line();
					state._fsp--;

					}
					break;
				case 2 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:16: triangle
					{
					pushFollow(FOLLOW_triangle_in_list64);
					triangle();
					state._fsp--;

					}
					break;
				case 3 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:28: rectangle
					{
					pushFollow(FOLLOW_rectangle_in_list69);
					rectangle();
					state._fsp--;

					}
					break;
				case 4 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:41: curve
					{
					pushFollow(FOLLOW_curve_in_list74);
					curve();
					state._fsp--;

					}
					break;
				case 5 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:50: circle
					{
					pushFollow(FOLLOW_circle_in_list79);
					circle();
					state._fsp--;

					}
					break;
				case 6 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:16:60: ellipse
					{
					pushFollow(FOLLOW_ellipse_in_list84);
					ellipse();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list"



	// $ANTLR start "line"
	// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:1: line : 'LINE:' 'XSTART' l1= FLOAT 'YSTART' l2= FLOAT 'XEND' l3= FLOAT 'YEND' l4= FLOAT ( 'COLOR' l5= RGB )? ( 'WIDTH' l6= FLOAT )? ;
	public final void line() throws RecognitionException {
		Token l1=null;
		Token l2=null;
		Token l3=null;
		Token l4=null;
		Token l5=null;
		Token l6=null;

		try {
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:7: ( 'LINE:' 'XSTART' l1= FLOAT 'YSTART' l2= FLOAT 'XEND' l3= FLOAT 'YEND' l4= FLOAT ( 'COLOR' l5= RGB )? ( 'WIDTH' l6= FLOAT )? )
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:9: 'LINE:' 'XSTART' l1= FLOAT 'YSTART' l2= FLOAT 'XEND' l3= FLOAT 'YEND' l4= FLOAT ( 'COLOR' l5= RGB )? ( 'WIDTH' l6= FLOAT )?
			{
			match(input,19,FOLLOW_19_in_line95); 
			match(input,35,FOLLOW_35_in_line97); 
			l1=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line101); 
			float xstart=Float.valueOf((l1!=null?l1.getText():null));
			match(input,42,FOLLOW_42_in_line105); 
			l2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line109); 
			float ystart=Float.valueOf((l2!=null?l2.getText():null));
			match(input,33,FOLLOW_33_in_line113); 
			l3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line117); 
			float xend=Float.valueOf((l3!=null?l3.getText():null));
			match(input,40,FOLLOW_40_in_line121); 
			l4=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line125); 
			float yend=Float.valueOf((l4!=null?l4.getText():null));
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:181: ( 'COLOR' l5= RGB )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==11) ) {
				alt3=1;
			}
			
			String color = null;
			switch (alt3) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:182: 'COLOR' l5= RGB
					{
					match(input,11,FOLLOW_11_in_line130); 
					l5=(Token)match(input,RGB,FOLLOW_RGB_in_line134); 
					color=(l5!=null?l5.getText():null);
					}
					break;

			}

			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:224: ( 'WIDTH' l6= FLOAT )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==28) ) {
				alt4=1;
			}
			
			float width = 0;
			switch (alt4) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:19:225: 'WIDTH' l6= FLOAT
					{
					match(input,28,FOLLOW_28_in_line141); 
					l6=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_line145); 
					width=Float.valueOf((l6!=null?l6.getText():null));
					}
					break;

			}

			System.out.println("context.beginPath();");
					 System.out.println("context.lineWidth = " + width + ";");
					 System.out.println("context.strokeStyle = " + color + ";");
					 System.out.println("context.moveTo( " + xstart + ", " + ystart + ");");
					 System.out.println("context.lineTo( " + xend + ", " + yend + ");");
					 System.out.println("context.stroke();");
					 System.out.println("context.closePath();");
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "line"



	// $ANTLR start "triangle"
	// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:1: triangle : 'TRIANGLE:' 'XA' t1= FLOAT 'YA' t2= FLOAT 'XB' t3= FLOAT 'YB' t4= FLOAT 'XC' t5= FLOAT 'YC' t6= FLOAT ( 'COLOR' t7= RGB )? ( 'WIDTH' t8= FLOAT )? ( 'COLORBODY' t9= RGB )? ;
	public final void triangle() throws RecognitionException {
		Token t1=null;
		Token t2=null;
		Token t3=null;
		Token t4=null;
		Token t5=null;
		Token t6=null;
		Token t7=null;
		Token t8=null;
		Token t9=null;

		try {
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:11: ( 'TRIANGLE:' 'XA' t1= FLOAT 'YA' t2= FLOAT 'XB' t3= FLOAT 'YB' t4= FLOAT 'XC' t5= FLOAT 'YC' t6= FLOAT ( 'COLOR' t7= RGB )? ( 'WIDTH' t8= FLOAT )? ( 'COLORBODY' t9= RGB )? )
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:13: 'TRIANGLE:' 'XA' t1= FLOAT 'YA' t2= FLOAT 'XB' t3= FLOAT 'YB' t4= FLOAT 'XC' t5= FLOAT 'YC' t6= FLOAT ( 'COLOR' t7= RGB )? ( 'WIDTH' t8= FLOAT )? ( 'COLORBODY' t9= RGB )?
			{
			match(input,27,FOLLOW_27_in_triangle165); 
			match(input,29,FOLLOW_29_in_triangle167); 
			t1=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle171); 
			float xa=Float.valueOf((t1!=null?t1.getText():null));
			match(input,36,FOLLOW_36_in_triangle175); 
			t2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle179); 
			float ya=Float.valueOf((t2!=null?t2.getText():null));
			match(input,30,FOLLOW_30_in_triangle183); 
			t3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle187); 
			float xb=Float.valueOf((t3!=null?t3.getText():null));
			match(input,37,FOLLOW_37_in_triangle191); 
			t4=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle195); 
			float yb=Float.valueOf((t4!=null?t4.getText():null));
			match(input,31,FOLLOW_31_in_triangle199); 
			t5=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle203); 
			float xc=Float.valueOf((t5!=null?t5.getText():null));
			match(input,38,FOLLOW_38_in_triangle207); 
			t6=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle211); 
			float yc=Float.valueOf((t6!=null?t6.getText():null));
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:235: ( 'COLOR' t7= RGB )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==11) ) {
				alt5=1;
			}
			
			String color = null;
			switch (alt5) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:236: 'COLOR' t7= RGB
					{
					match(input,11,FOLLOW_11_in_triangle216); 
					t7=(Token)match(input,RGB,FOLLOW_RGB_in_triangle220); 
					color=(t7!=null?t7.getText():null);
					}
					break;

			}

			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:278: ( 'WIDTH' t8= FLOAT )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==28) ) {
				alt6=1;
			}
			
			float width = 0;
			switch (alt6) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:279: 'WIDTH' t8= FLOAT
					{
					match(input,28,FOLLOW_28_in_triangle227); 
					t8=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_triangle231); 
					width=Float.valueOf((t8!=null?t8.getText():null));
					}
					break;

			}

			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:322: ( 'COLORBODY' t9= RGB )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==12) ) {
				alt7=1;
			}
			
			String colorbody = null;
			
			switch (alt7) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:30:323: 'COLORBODY' t9= RGB
					{
					match(input,12,FOLLOW_12_in_triangle238); 
					t9=(Token)match(input,RGB,FOLLOW_RGB_in_triangle242); 
					colorbody=(t9!=null?t9.getText():null);
					}
					break;

			}

			System.out.println("context.beginPath();");
					 	 System.out.println("context.lineWidth = " + width + ";");
					 	 System.out.println("context.strokeStyle = " + color + ";");
					 	 System.out.println("context.moveTo(" + xa + ", " + ya + ");");
					 	 System.out.println("context.lineTo(" + xb + ", " + yb + ");");
						 System.out.println("context.lineTo(" + xc + ", " + yc + ");");
						 System.out.println("context.stroke();");
						 System.out.println("context.fillStyle= " + colorbody + ";");
						 System.out.println("context.fill();");
						 System.out.println("context.closePath();");
						
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "triangle"



	// $ANTLR start "rectangle"
	// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:1: rectangle : 'RECT:' 'XSTART' r1= FLOAT 'YSTART' r2= FLOAT 'XEND' r3= FLOAT 'YEND' r4= FLOAT ( 'COLOR' r5= RGB )? ( 'WIDTH' r6= FLOAT )? ( 'COLORBODY' r7= RGB )? ;
	public final void rectangle() throws RecognitionException {
		Token r1=null;
		Token r2=null;
		Token r3=null;
		Token r4=null;
		Token r5=null;
		Token r6=null;
		Token r7=null;

		try {
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:12: ( 'RECT:' 'XSTART' r1= FLOAT 'YSTART' r2= FLOAT 'XEND' r3= FLOAT 'YEND' r4= FLOAT ( 'COLOR' r5= RGB )? ( 'WIDTH' r6= FLOAT )? ( 'COLORBODY' r7= RGB )? )
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:14: 'RECT:' 'XSTART' r1= FLOAT 'YSTART' r2= FLOAT 'XEND' r3= FLOAT 'YEND' r4= FLOAT ( 'COLOR' r5= RGB )? ( 'WIDTH' r6= FLOAT )? ( 'COLORBODY' r7= RGB )?
			{
			match(input,21,FOLLOW_21_in_rectangle262); 
			match(input,35,FOLLOW_35_in_rectangle264); 
			r1=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_rectangle268); 
			float xstart=Float.valueOf((r1!=null?r1.getText():null));
			match(input,42,FOLLOW_42_in_rectangle272); 
			r2=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_rectangle276); 
			float ystart=Float.valueOf((r2!=null?r2.getText():null));
			match(input,33,FOLLOW_33_in_rectangle280); 
			r3=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_rectangle284); 
			float xend=Float.valueOf((r3!=null?r3.getText():null));
			match(input,40,FOLLOW_40_in_rectangle288); 
			r4=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_rectangle292); 
			float yend=Float.valueOf((r4!=null?r4.getText():null));
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:186: ( 'COLOR' r5= RGB )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==11) ) {
				alt8=1;
			}
			
			String color = null;
			switch (alt8) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:187: 'COLOR' r5= RGB
					{
					match(input,11,FOLLOW_11_in_rectangle297); 
					r5=(Token)match(input,RGB,FOLLOW_RGB_in_rectangle301); 
					color=(r5!=null?r5.getText():null);
					}
					break;

			}

			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:229: ( 'WIDTH' r6= FLOAT )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==28) ) {
				alt9=1;
			}
			
			float width = 0;
			switch (alt9) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:230: 'WIDTH' r6= FLOAT
					{
					match(input,28,FOLLOW_28_in_rectangle308); 
					r6=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_rectangle312); 
					width=Float.valueOf((r6!=null?r6.getText():null));
					}
					break;

			}

			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:273: ( 'COLORBODY' r7= RGB )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==12) ) {
				alt10=1;
			}
			
			String colorbody = null;
			switch (alt10) {
				case 1 :
					// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:44:274: 'COLORBODY' r7= RGB
					{
					match(input,12,FOLLOW_12_in_rectangle319); 
					r7=(Token)match(input,RGB,FOLLOW_RGB_in_rectangle323); 
					colorbody=(r7!=null?r7.getText():null);
					}
					break;

			}

			float heigth=yend-ystart;
			float breadth=xend-xstart;
			System.out.println("context.beginPath();");
			System.out.println("context.lineWidth = " + width + ";");
			System.out.println("context.strokeStyle = " + color + ";");
			System.out.println("context.rect( " + xstart + ", " + ystart + ", " + heigth + ", " + breadth + ");");
			System.out.println("context.stroke();");
			System.out.println("context.fillStyle= " + colorbody + ";");
			System.out.println("context.fill();");
			System.out.println("context.closePath();");
						
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "rectangle"



	// $ANTLR start "curve"
	// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:58:1: curve : 'CURV:' 'XSTART' cu1= FLOAT 'YSTART' cu2= FLOAT 'XMIDDLE' cu3= FLOAT 'YMIDDLE' cu4= FLOAT 'XEND' cu5= FLOAT 'YEND' cu6= FLOAT ( 'COLOR' cu7= RGB )? ( 'WIDTH' cu8= FLOAT )? ( 'COLORBODY' cu9= RGB )? ;
	public final void curve() throws RecognitionException {
		Token cu1=null;
		Token cu2=null;
		Token cu3=null;
		Token cu4=null;
		Token cu5=null;
		Token cu6=null;
		Token cu7=null;
		Token cu8=null;
		Token cu9=null;

		try {
			// D:\\Università\\Linguaggi formali e compilatori\\Progetto\\G8\\G8prova.g:58:8: ( 'CURV:' 'XSTART' cu1= FLOAT 'YSTART' cu2= FLOAT 'XMIDDLE' cu3= FLOAT 'YMIDDLE' cu4= FLOAT 'XEND' cu5= FLOAT 'YEND' cu6= FLOAT ( 'COLOR' cu7= RGB )? ( 'WIDTH' cu8= FLOAT )? ( 'COLORBODY' cu9= RGB )? )
